# HypnosWebsite

./: .gitignore  1  README.md  index.html  package.json  tailwind.config.js  vercel.json
ServerInformationAPI/: Cargo.toml  config.json
ServerInformationAPI/src/: config.rs  lib.rs  main.rs
src/: App.module.css  App.tsx  index.scss  types.ts
src/components/: About.tsx  Board.tsx  Home.tsx  Map.tsx  Navbar.tsx  Page404.tsx  Status.tsx
